--- a/style.css
+++ b/style.css
@@ -1,69 +1,11 @@
-:root {
-    --encabezados: #7fffd4;
-}
 
-* {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    
-}
 
-header {
-    background-color: rgba(192, 242, 192, 0.707);
-    padding: 20px;
-    
-/* COMO PONER LAS LETRAS AZULES Y SIN EL SUBRAYADO DE HIUPERVINCULO
-YA LO HE HECHO PERO NO ME ACUERDO COMO*/
-}
 
-nav {
-    padding-top: 15px;
-    margin-right: 20px;
-    float: inline-end;
-    margin-bottom: 20px;
-
-}
-
-.bg-image {
-    background-image: url(./img.webp);
-    width: 100%;
-   height: 200px;
-}
-
-h2 { 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    color: var(--encabezados);
-    align-items: center;
-    position: relative;
-    padding-top: 30px;
-    font-size:xx-large;
-    
-}
-
-p {
-    float: inline-end;
-    padding-right: 20px;
-    width: 40%;
-
-    /*ves hermosa ya vas podiendo poco a poco; 
-    ya entendiste lo de width, lo de padding y como realizar el diseño;
-    poco a poco */
-}
-
-.my-work {
-    color: var(--encabezados);
-}
-
-.contact {
-    color: var(--encabezados);
-}
 
 /*LO QUE USÉ EN EL MINI PROJECT SERÁ UTILIZADO EN LA SECTION DE "MY WORK"
 QUE HAGA. Esto que puse abajo es lo que usé en el mini project y lo usaré como base*/
+
+/*
 :root {
     --main-color: rgb(222, 104, 124); 
     --bg-main-color:  
@@ -114,7 +56,7 @@ QUE HAGA. Esto que puse abajo es lo que usé en el mini project y lo usaré como
         padding: 3px;
         
     }
-
+*/
     /*YA ENTENDI COMO SE DIVIERON LAS CLASES EN EL SCRIPT;
     .CARD ES EN TOTAL TODA LA TARJETITA; QUE ES PUNTEADA, Y ES EN COLUMNA;
     CARD HEADER ES LITERAL EL TITOLO QUE DICE FLEX BOX EN ESTE CASO 
