--- a/style.css
+++ b/style.css
@@ -1,6 +1,58 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(205, 180, 228);
+}
+
+li, a, h2{
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    
+    
+}
 
 
+header { 
+    display:flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 3px 10%;
+}
 
+
+.title { 
+    display:flex;
+    align-items: center;
+    margin-top: 40px;
+    margin-left: 10%;
+    font-size: 25px;
+}
+.nav-links {
+    list-style: none;
+    
+ }
+
+ .nav-links li {
+    display: inline-block;
+    padding: 0px 13px;
+
+ }
+ .nav-links li a {
+    transition: all 0.3s ease 0s;
+ }
+
+ .nav-links li a:hover {
+    color: rgb(227, 226, 227);
+
+ }
+
+
+  
 
 /*LO QUE USÉ EN EL MINI PROJECT SERÁ UTILIZADO EN LA SECTION DE "MY WORK"
 QUE HAGA. Esto que puse abajo es lo que usé en el mini project y lo usaré como base*/
