--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background-color: rgb(205, 180, 228);
+ 
 }
 
 li, a, h2{
@@ -12,7 +12,6 @@ li, a, h2{
     font-size: 20px;
     color: black;
     text-decoration: none;
-    
     
 }
 
@@ -40,6 +39,7 @@ header {
  .nav-links li {
     display: inline-block;
     padding: 0px 13px;
+    margin-bottom: 10px;
 
  }
  .nav-links li a {
@@ -47,11 +47,46 @@ header {
  }
 
  .nav-links li a:hover {
-    color: rgb(227, 226, 227);
+    color: pink;
 
  }
 
+.subtitle {
+    background-image: url("bgimg.jpg");
+    width: 100%;
+    padding: 20px;
+    color: white;
 
+}
+
+/*COMO LE HAGO PARA QE EL ABOUT ME Y EL CONTENT NO SE ENCIMEN ENTRE SÍ 
+CUNDO LO HAGO PEQUEÑO*/
+
+.aboutme {
+    display: flex;
+     flex-wrap: wrap;
+     flex-direction: column;
+     font-size: 20px;
+    margin-top: 30px;
+    text-align: center;
+    justify-content: center;
+    margin-left: 20%;
+    position: absolute;
+}
+
+.amcontent {
+    display: flex;
+    width: 70%;
+    margin-left: 35%;
+    margin-top: 10px;
+   background-color: rgba(234, 158, 171, 0.26);
+}
+
+
+
+
+
+ 
   
 
 /*LO QUE USÉ EN EL MINI PROJECT SERÁ UTILIZADO EN LA SECTION DE "MY WORK"
