--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
+root:{
+    --bgcontent: rgba(234, 158, 171, 0.26);
+}
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -79,15 +83,65 @@ CUNDO LO HAGO PEQUEÑO*/
     width: 70%;
     margin-left: 35%;
     margin-top: 10px;
-   background-color: rgba(234, 158, 171, 0.26);
+    border-radius:20px;
+    padding: 10px;
+    background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
+        flex: 0 0 50%;
+        max-width: 75%;
+}
+
+.mywork {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    font-size: 20px;
+   margin-top: 30px;
+   text-align: center;
+   justify-content: center;
+   margin-left: 20%;
+   position: absolute;
+}
+
+.mwcontent {
+    display: flex;
+    width: 70%;
+    margin-left: 35%;
+    margin-top: 10px;
+    border-radius:20px;
+    padding: 10px;
+    background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
+}
+
+.Contactme {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    font-size: 20px;
+   margin-top: 30px;
+   text-align: center;
+   justify-content: center;
+   margin-left: 20%;
+   position: absolute;
+   
+}
+
+.cmcontent {
+    display: flex;
+    width: 70%;
+    margin-left: 35%;
+    margin-top: 10px;
+    border-radius:20px;
+    padding: 10px;
+    background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
 }
 
 
+.amcontent:hover,
+.mwcontent:hover, .cmcontent:hover {
+  box-shadow: inset 0px 0px 8px rgb(230, 70, 94);
+}
 
 
-
- 
-  
 
 /*LO QUE USÉ EN EL MINI PROJECT SERÁ UTILIZADO EN LA SECTION DE "MY WORK"
 QUE HAGA. Esto que puse abajo es lo que usé en el mini project y lo usaré como base*/
