--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ CUNDO LO HAGO PEQUEÑO*/
      flex-wrap: wrap;
      flex-direction: column;
      font-size: 20px;
-    margin-top: 30px;
+    margin-top: 35px;
     text-align: center;
     justify-content: center;
     margin-left: 20%;
@@ -89,12 +89,34 @@ CUNDO LO HAGO PEQUEÑO*/
     max-width: 63%;
 }
 
+.container {
+    display: flex;
+    width: 70%;
+    margin-left: 35%;
+    margin-top: 10px;
+    border-radius:20px;
+    padding: 10px;
+    background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
+    max-width: 63%;
+}
+
+.box {
+    width: 70%px;
+    height: 100px;
+    background-color: lightblue;
+}
+.box2 {
+    width: 70%px;
+    height: 100px;
+    background-color: white;
+}
+
 .mywork {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
     font-size: 20px;
-   margin-top: 30px;
+   margin-top: 40px;
    text-align: center;
    justify-content: center;
    margin-left: 20%;
@@ -112,7 +134,7 @@ CUNDO LO HAGO PEQUEÑO*/
     max-width: 63%;
 }
 
-.Contactme {
+.contactme {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -141,6 +163,18 @@ CUNDO LO HAGO PEQUEÑO*/
 .mwcontent:hover, .cmcontent:hover {
   box-shadow: inset 0px 0px 8px rgb(230, 70, 94);
 }
+
+.amcontent, .cmcontent,.mwcontent {  
+  box-shadow: 5px 5px 5px #aaaaaa;
+  
+}
+
+@media screen and (max-width: px) {
+  body{
+    flex-direction: column;
+  }
+}
+
 
 
 
