--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 
 root:{
     --bgcontent: rgba(234, 158, 171, 0.26);
@@ -8,6 +7,7 @@ root:{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  
 }
 
@@ -103,33 +103,39 @@ CUNDO LO HAGO PEQUEÑO*/
 
 
 .box {
-    width: 70px;
+    width: 10px;
     height: 100%;
     background-color: lightblue;
 }
 .box2 {
-    font-size: smaller;
-    width: 100%;
-    height: 200px;
     background-image: url("bgimg.jpg");
-    
+    font-size: 20px;
+    width: 130px;
+    height: 100px;
+    border-radius: 15px;
+    align-content: center;
 }
 .box3 {
-    font-style: smaller;
-    flex-direction: column;
-    width: 70%;
-    height: 200px;
+    font-size: 20px;
+    width: 100%;
+    height: 300px;
     background-color: white;
     margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 15px;
+    align-content: center;
+    text-align: center;
 }
 
 .box4 {
-    font-size: smaller;
-    width: 100%;
-    height: 200px;
-    background-color: aqua;
-    margin-left: 10%;
-    margin-right: 10%;
+    font-size: 20px;
+    width: 300px;
+    height: 300px;
+    background-color: pink;  
+    border-radius: 15px;
+    align-content:center;
+    text-align: center;
+   
 }
 
 
