--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-root:{
+:root{
     --bgcontent: rgba(234, 158, 171, 0.26);
 }
 
@@ -67,21 +67,20 @@ header {
 CUNDO LO HAGO PEQUEÑO*/
 
 .aboutme {
-    display: flex;
-     flex-wrap: wrap;
-     flex-direction: column;
-     font-size: 20px;
-    margin-top: 35px;
-    text-align: center;
-    justify-content: center;
-    margin-left: 20%;
-    position: absolute;
+   display: flex;
+   font-size: 20px;
+   margin-top: 35px;
+   text-align: center;
+   justify-content: center;
+   align-items: center;
+   margin-left: 20%;
+   
 }
 
 .amcontent {
-    display: flex;
+    /*display: flex;*/
     width: 70%;
-    margin-left: 35%;
+    margin-left:10%;
     margin-top: 10px;
     border-radius:20px;
     padding: 10px;
@@ -92,7 +91,7 @@ CUNDO LO HAGO PEQUEÑO*/
 .container {
     display: flex;
     width: 70%;
-    margin-left: 35%;
+    margin-left: 10%;
     margin-top: 10px;
     border-radius:20px;
     padding: 10px;
@@ -130,7 +129,7 @@ CUNDO LO HAGO PEQUEÑO*/
 .box4 {
     font-size: 20px;
     width: 300px;
-    height: 300px;
+    height: 500px;
     background-color: pink;  
     border-radius: 15px;
     align-content:center;
@@ -141,20 +140,19 @@ CUNDO LO HAGO PEQUEÑO*/
 
 .mywork {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
     font-size: 20px;
-   margin-top: 40px;
-   text-align: center;
-   justify-content: center;
-   margin-left: 20%;
-   position: absolute;
+    margin-top: 35px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+     margin-left: 20%;
+    
 }
 
 .mwcontent {
     display: flex;
     width: 100%;
-    margin-left: 35%;
+    margin-left:10%;
     margin-top: 10px;
     border-radius:20px;
     padding: 10px;
@@ -164,14 +162,13 @@ CUNDO LO HAGO PEQUEÑO*/
 
 .contactme {
     display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
     font-size: 20px;
-   margin-top: 30px;
-   text-align: center;
-   justify-content: center;
-   margin-left: 20%;
-   position: absolute;
+    margin-top: 35px;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+     margin-left: 20%;
+    
    
 }
 
@@ -200,8 +197,11 @@ CUNDO LO HAGO PEQUEÑO*/
     box-shadow: inset 0px 0px 8px rgb(230, 70, 94);
 }
 
-@media screen and (max-width: px) {
-  body{
+@media screen and (max-width: 680px) {
+  .aboutme{
+    flex-direction: column;
+  }
+  .mywork{
     flex-direction: column;
   }
 }
