--- a/style.css
+++ b/style.css
@@ -20,6 +20,12 @@ li, a, h2{
 }
 
 
+img  {
+    width: 100px;
+    margin-left: 100px;
+    margin-top: 10px;
+    
+}
 header { 
     display:flex;
     justify-content: flex-end;
@@ -60,6 +66,8 @@ header {
     width: 100%;
     padding: 20px;
     color: white;
+    
+   
 
 }
 
@@ -150,8 +158,7 @@ CUNDO LO HAGO PEQUEÑO*/
 }
 
 .mwcontent {
-    display: flex;
-    width: 100%;
+    width: 70%;
     margin-left:10%;
     margin-top: 10px;
     border-radius:20px;
@@ -169,18 +176,19 @@ CUNDO LO HAGO PEQUEÑO*/
     align-items: center;
      margin-left: 20%;
     
+    
    
 }
 
 .cmcontent {
-    display: flex;
     width: 70%;
-    margin-left: 35%;
+    margin-left:10%;
     margin-top: 10px;
     border-radius:20px;
     padding: 10px;
-    max-width: 63%;
     background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
+    max-width: 63%;
+    margin-bottom: 50px;
 }
 
 
