--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@ img  {
     width: 100px;
     margin-left: 100px;
     margin-top: 10px;
+  /*PREGUNTAR EN OFFICE HOURS COMO 
+  HACERLE PARA QUE LA SHAK QUEDE DONDE MISMO I
+  CUANDO SE HACE PEQUEÑA O GRANDE LA PANTAÑÑA*/
     
 }
 header { 
@@ -71,8 +74,6 @@ header {
 
 }
 
-/*COMO LE HAGO PARA QE EL ABOUT ME Y EL CONTENT NO SE ENCIMEN ENTRE SÍ 
-CUNDO LO HAGO PEQUEÑO*/
 
 .aboutme {
    display: flex;
@@ -86,7 +87,7 @@ CUNDO LO HAGO PEQUEÑO*/
 }
 
 .amcontent {
-    /*display: flex;*/
+   
     width: 70%;
     margin-left:10%;
     margin-top: 10px;
@@ -104,7 +105,7 @@ CUNDO LO HAGO PEQUEÑO*/
     border-radius:20px;
     padding: 10px;
     background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
-    max-width: 63%;
+    max-width: 100%;
     
 }
 
@@ -137,14 +138,26 @@ CUNDO LO HAGO PEQUEÑO*/
 .box4 {
     font-size: 20px;
     width: 300px;
-    height: 500px;
-    background-color: pink;  
+    height: 400Spx;
+    background-color: rgb(198, 82, 101);  
     border-radius: 15px;
     align-content:center;
     text-align: center;
    
 }
 
+.box5 {
+    font-size: 20px;
+    width: 300px;
+    height: 400Spx;
+    background-color: pink;  
+    border-radius: 15px;
+    align-content:center;
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 15px;}
+   
 
 .mywork {
     display: flex;
@@ -172,27 +185,15 @@ CUNDO LO HAGO PEQUEÑO*/
     font-size: 20px;
     margin-top: 35px;
     text-align: center;
-    justify-content: center;
+    justify-content: s;
     align-items: center;
-     margin-left: 20%;
-    
+    margin-left: 20%;
+    margin-bottom: 100px;
     
    
 }
 
-.cmcontent {
-    width: 70%;
-    margin-left:10%;
-    margin-top: 10px;
-    border-radius:20px;
-    padding: 10px;
-    background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
-    max-width: 63%;
-    margin-bottom: 50px;
-}
-
-
-.amcontent:hover, .cmcontent:hover {
+.amcontent:hover, {
   box-shadow: inset 0px 0px 8px rgb(230, 70, 94);
 }
 
@@ -201,7 +202,7 @@ CUNDO LO HAGO PEQUEÑO*/
   
 }
 
-.box2:hover, .box3:hover, .box4:hover, .box {
+.box2:hover, .box3:hover, .box4:hover, .box5:hover{
     box-shadow: inset 0px 0px 8px rgb(230, 70, 94);
 }
 
@@ -210,71 +211,23 @@ CUNDO LO HAGO PEQUEÑO*/
     flex-direction: column;
   }
   .mywork{
-    flex-direction: column;
+    flex-direction: column;}
+    .contactme{
+        flex-direction: column;
+    }
   }
+
+
+.cmcontent{
+    margin-left: 60px;
 }
 
+.button1 {
+ margin-left: 60px;
+ transition-duration: 0.4s;
+}
+.button1:hover {
+    background-color: pink;
+    color: white;}
 
 
-
-/*LO QUE USÉ EN EL MINI PROJECT SERÁ UTILIZADO EN LA SECTION DE "MY WORK"
-QUE HAGA. Esto que puse abajo es lo que usé en el mini project y lo usaré como base*/
-
-/*
-:root {
-    --main-color: rgb(222, 104, 124); 
-    --bg-main-color:  
-    }
-    body {
-        
-        
-    }
-    
-    .card-column {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    
-    .main-color {
-        color: var(--main-color); 
-    }
-    
-    .card {
-        border: dashed white 2px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-    }
-    .card-header {
-        position: absolute;
-        top: -22%;
-        background-color: var(--bg-main-color);
-        width: 90%;
-        border:solid white 3px ;
-        padding: 3px;
-        border-radius: 7px;
-    }
-    
-    .card-body {
-        margin-top: 10px;
-        font-weight: 100;
-        width: 90%;
-    
-    }
-    .code-block {
-        color: white;
-        background: linear-gradient(rgb(58, 28, 33), var(--main-color));
-        width: 90%;
-        border-radius: 7px;
-        text-justify: initial;
-        padding: 3px;
-        
-    }
-*/
-    /*YA ENTENDI COMO SE DIVIERON LAS CLASES EN EL SCRIPT;
-    .CARD ES EN TOTAL TODA LA TARJETITA; QUE ES PUNTEADA, Y ES EN COLUMNA;
-    CARD HEADER ES LITERAL EL TITOLO QUE DICE FLEX BOX EN ESTE CASO 
-    Y SE LE PONE -22 PORQUE EN ESTE CASO DEBE DE ESTAR POR FUERAA DE  CARD ETC ETC
-  */
-  
