--- a/style.css
+++ b/style.css
@@ -181,16 +181,14 @@ header {
 }
 
 .contactme {
-    display: flex;
     font-size: 20px;
     margin-top: 35px;
     text-align: center;
-    justify-content: s;
     align-items: center;
-    margin-left: 20%;
-    margin-bottom: 100px;
-    
-   
+    margin-bottom: 70px;  
+}
+.cmcontent {
+    margin-top: 10px;
 }
 
 .amcontent:hover, {
@@ -217,13 +215,10 @@ header {
     }
   }
 
-
-.cmcontent{
-    margin-left: 60px;
-}
+/*
 
 .button1 {
- margin-left: 60px;
+ margin-left: 10px;
  transition-duration: 0.4s;
 }
 .button1:hover {
