--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
 
-:root{
-    --bgcontent: rgba(234, 158, 171, 0.26);
-}
 
 *{
     box-sizing: border-box;
@@ -69,9 +66,6 @@ header {
     width: 100%;
     padding: 20px;
     color: white;
-    
-   
-
 }
 
 
@@ -83,7 +77,7 @@ header {
    justify-content: center;
    align-items: center;
    margin-left: 20%;
-   
+
 }
 
 .amcontent {
@@ -114,6 +108,7 @@ header {
     width: 10px;
     height: 100%;
     background-color: lightblue;
+
 }
 .box2 {
     background-image: url("bgimg.jpg");
@@ -122,6 +117,7 @@ header {
     height: 100px;
     border-radius: 15px;
     align-content: center;
+
 }
 .box3 {
     font-size: 20px;
@@ -133,6 +129,7 @@ header {
     border-radius: 15px;
     align-content: center;
     text-align: center;
+
 }
 
 .box4 {
@@ -156,8 +153,8 @@ header {
     text-align: center;
     margin-left: 10px;
     margin-right: 10px;
-    border-radius: 15px;}
-
+    border-radius: 15px;
+}
 
 .box5:hover{
         background-color: whitesmoke;
@@ -192,12 +189,15 @@ header {
     align-items: center;
     margin-bottom: 70px;  
 }
+
 .cmcontent {
     margin-top: 10px;
+
 }
 
 .amcontent:hover, {
   box-shadow: inset 0px 0px 8px rgb(230, 70, 94);
+
 }
 
 .amcontent, .cmcontent,.container {  
@@ -221,14 +221,5 @@ header {
     }
   }
 
-/*
-
-.button1 {
- margin-left: 10px;
- transition-duration: 0.4s;
-}
-.button1:hover {
-    background-color: pink;
-    color: white;}
 
 
