--- a/style.css
+++ b/style.css
@@ -101,37 +101,44 @@ header {
     background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
     max-width: 100%;
     
-}
-
+   }
+    
 
 .box {
     width: 10px;
     height: 100%;
     background-color: lightblue;
-
 }
 .box2 {
-    background-image: url("bgimg.jpg");
+    background-image: url("github.png");
     font-size: 20px;
     width: 130px;
     height: 100px;
     border-radius: 15px;
-    align-content: center;
-
+    align-content: end;
+    
 }
+.git, .app, .pre  {
+    background-color: white;
+ color:rgb(227, 50, 79);
+}
+
+
 .box3 {
     font-size: 20px;
-    width: 100%;
-    height: 300px;
+    width: 400px;
+    height: 200px;
     background-color: white;
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 15px;
-    align-content: center;
+    align-content: end;
     text-align: center;
+    background-image: url(firstapp.png);
+    background-repeat::after;
 
 }
-
+/*
 .box4 {
     font-size: 20px;
     width: 300px;
@@ -142,20 +149,20 @@ header {
     text-align: center;
    
 }
-
+*/
 .box5 {
     font-size: 20px;
     width: 300px;
     height: 400Spx;
     background-color: pink;  
     border-radius: 15px;
-    align-content:center;
+    align-content:end;
     text-align: center;
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 15px;
+    background-image: url(prework.png);
 }
-
 .box5:hover{
         background-color: whitesmoke;
         transition-duration: 0.4s;
@@ -180,6 +187,7 @@ header {
     padding: 10px;
     background: linear-gradient(45deg,  rgba(234, 158, 171, 0.26), rgb(230, 70, 94));
     max-width: 63%;
+    
 }
 
 .contactme {
@@ -205,7 +213,7 @@ header {
   
 }
 
-.box2:hover, .box3:hover, .box4:hover/*.box5:hover*/{
+.box2:hover, .box3:hover, .box5:hover/*.box5:hover*/{
     box-shadow: inset 0px 0px 8px rgb(230, 70, 94);
     transition-duration: 0.4s;
 }
